# gitmate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gitmate/: __main__.py  main.py  models.py  utils.py
