[tool.poetry]
name = "gitmate"
version = "0.0.3"
description = ""
authors = ["Rohit Gupta <rohitgr1998@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gitmate = "gitmate.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
halo = "^0.0.31"
requests = "^2.28.2"
rich = "^13.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120
